force-app/main/default/objects/NCMT_DES_Assembly_Details__c/NCMT_DES_Assembly_Details__c.object-meta.xml
<CustomObject>
    <label>NCMT DES Assembly Details</label>
    <nameField>
        <label>DES Assembly LineItem</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCMT DES Assembly Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>