force-app/main/default/objects/NCMT_DES_Assembly_Details__c/fields/Assembly_SKey__c.field-meta.xml
<CustomField>
    <fullName>Assembly_SKey__c</fullName>
    <formula>NCMT_DES_Item__r.Assembly_SKey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assembly SKey</label>
    <type>Text</type>
</CustomField>