force-app/main/default/objects/NCMT_DES_Assembly_Details__c/fields/Crew_Master_Name__c.field-meta.xml
<CustomField>
    <fullName>Crew_Master_Name__c</fullName>
    <label>Crew Master Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>