force-app/main/default/objects/NCMT_DES_Assembly_Details__c/fields/Equipment_Unit_Cost_per_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Unit_Cost_per_Quantity__c</fullName>
    <description>equals equipment unit cost times quantity at DES Assembly Details record level</description>
    <formula>Equipment_Unit_Cost__c  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Equipment Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>