force-app/main/default/objects/NCMT_DES_Assembly_Details__c/fields/Labor_Burden_Impact__c.field-meta.xml
<CustomField>
    <fullName>Labor_Burden_Impact__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <formula>Labor_Unit_Cost_per_Quantity__c * Labor_Burden_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labor Burden Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>