force-app/main/default/objects/NCMT_DES_Assembly_Details__c/fields/Labor_Unit_Cost_per_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Labor_Unit_Cost_per_Quantity__c</fullName>
    <description>equals labor unit cost times quantity on at the DES Assembly Details record level.</description>
    <formula>Labor_Unit_Cost__c  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Labor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>