force-app/main/default/objects/NCMT_DES_Assembly_Details__c/fields/Material_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Material_Unit_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Material Unit Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>