force-app/main/default/objects/NCMT_DES_Assembly_Details__c/fields/NCMT_DES_Item__c.field-meta.xml
<CustomField>
    <fullName>NCMT_DES_Item__c</fullName>
    <label>NCMT DES Item</label>
    <referenceTo>NCMT_DES_Items__c</referenceTo>
    <relationshipLabel>NCMT DES Assembly Details</relationshipLabel>
    <relationshipName>NCMT_DES_Assembly_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>