force-app/main/default/objects/NCMT_DES_Assembly_Details__c/fields/NCMT_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Project_ID__c</fullName>
    <formula>NCMT_DES_Item__r.NCMT_Project_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCMT Project ID</label>
    <type>Text</type>
</CustomField>