force-app/main/default/objects/NCMT_DES_Assembly_Details__c/fields/O_P_Per_Quantity__c.field-meta.xml
<CustomField>
    <fullName>O_P_Per_Quantity__c</fullName>
    <description>O&amp;P Unit Total from NCMT DES Lookup Detail is used to calculate the cost for the Quantity in DES Assembly Detail.</description>
    <label>O&amp;P Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>